--- a/The_Web/views/index.erb
+++ b/The_Web/views/index.erb
@@ -6,7 +6,7 @@
 
    <% if @name.nil? %>
 
-<form action="/named-cat">
+<form action="/named-cat" method="post">
   <input type="text" name="name">
   <input type="submit" value="submit"
 </form>
